# elsalvador-nemo

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  wrangler.toml
apps/focus/: app.js  i18n.js  index.html  style.css
apps/map/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/map/public/data/: manifest.json
apps/map/src/: colors.js  colors.ts  legend.js  legend.ts  main.js  main.ts  mobile-filters.ts  popup.js  popup.ts  style.css
config/: derived_fields.yaml  narrative_tags.yaml  occupation_groups.yaml  occupation_roles.yaml
scripts/: build_enriched_cache.py  build_geoboundaries_map.py  export_occupations.py  preload_dataset.py  serve_focus.sh  serve_map.sh  smoke_test_llm.sh
src/salvador_personas/: __init__.py
src/salvador_personas/api/: app.py
src/salvador_personas/cli/: build_map.py  focus_api.py  focus_group.py  personas.py  preload.py
src/salvador_personas/config/: env.py
src/salvador_personas/dataset/: cache.py  enrich.py  filters.py  loader.py
src/salvador_personas/geo/: boundaries.py  export.py  points.py
src/salvador_personas/models/: persona.py
src/salvador_personas/stage0/: generator.py
src/salvador_personas/stage1/: aggregate.py  cost.py  focus_group.py  models.py  parse.py  prompts.py
src/salvador_personas/stage1/llm/: base.py  factory.py  (+1 more)
src/salvador_personas/stage2/: derived.py
tests/: conftest.py  test_derived.py  test_focus_api.py  test_geo_points.py  test_loader.py  test_stage0_filter.py  test_stage0_seed.py  test_stage1_aggregate.py  test_stage1_parse.py
