[project]
name = "salvador-personas"
version = "0.1.0"
description = "Toolkit personas Salvador — focus group & sim (Nemotron dataset)"
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
stage1 = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "streamlit>=1.30.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
]
stage2 = [
    "shapely>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]
mapdev = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
focus-api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
sv-preload = "salvador_personas.cli.preload:main"
sv-personas = "salvador_personas.cli.personas:main"
sv-focus-group = "salvador_personas.cli.focus_group:main"
sv-build-map = "salvador_personas.cli.build_map:main"
sv-focus-api = "salvador_personas.cli.focus_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salvador_personas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
